<resources>
    <string name="app_name">Gestor de pedidos</string>
    <string name="app_logo">PEDIDOS | HORARIOS | CLIENTES </string>
    <string name="application_version">Version Beta 0.3</string>

    <string name="error_application">Ocurrió un error iniciando la aplicación. Por favor contáctenos escribiendo a rambruster@gmail.com.</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_item_home">Inicio</string>
    <string name="drawer_item_settings">Configuración</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_help">Ayuda</string>
    <string name="drawer_item_contact">Contacto</string>
    <string name="dialog_cancel">Cancelar</string>


    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repassword">Reescriba su contraseña</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_phone">99 99 999</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="btn_login">Conectar</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_link_to_register">¿No es miembro aún? Regístrese.</string>
    <string name="btn_link_to_login">¿Ya está registrado? Conéctese.</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">Desconectar</string>
    <string name="name">Nombre completo</string>
    <string name="Success">Conectado</string>
    <string name="Loading">Conectando</string>
    <string name="Registering">Registrando</string>
    <string name="pass_not_mach">Las contraseñas no coinciden</string>
    <string name="fill_the_fields">Por favor complete sus datos</string>
    <string name="fill_the_credentials">Por favor ingrese sus credenciales correctamente.</string>
    <string name="service_error">Error en el servicio, contácte a su administrador.</string>
    <string name="error_credentials">Error de credenciales</string>
    <string name="error_aut">Error autenticando</string>
    <string name="agree">Reintentar</string>
    <string name="exit">Salir</string>
    <string name="title_service">Error en servicio</string>
    <string name="restricted_access">Su acceso está restringido al servicio desde este dispositivo.</string>
    <string name="old_application">La versión de su aplicación está obsoleta, por favor actualice.</string>
    <string name="client_code">Código comercial</string>
    <string name="drawer_item_section_header">Configuración y Ayuda</string>
    <string name="logoff">Desconectar</string>
    <string name="fix">Ajustes</string>
    <string name="requests">Pedidos</string>
    <string name="requests_pending">Pendientes</string>
    <string name="requests_sended">Enviados</string>
    <string name="clients">Clientes</string>
    <string name="articles">Artículos</string>
    <string name="family">Familias</string>
    <string name="messages">Mensajes</string>
    <string name="logout">Desconectar</string>
    <string name="error_conection">Error intentando acceder al servicio, por favor verifique su conexión.</string>
    <string name="error_refresh">Error intentando acceder al servicio, por favor recargue.</string>
    <string name="empty_box">NO SE ENCONTRARON DATOS</string>
    <string name="trouble">Problemas de conexión.</string>
    <string name="search">Buscar</string>
    <string name="date">Fecha</string>
    <string name="client">Cliente</string>
    <string name="send">Enviado</string>
    <string name="wsend">Enviar</string>
    <string name="sending">Enviando</string>
    <string name="requestnumber">Número del pedido</string>
    <string name="client_name">Nombre del cliente</string>
    <string name="observation">Observación...</string>
    <string name="load">Cargar</string>
    <string name="fill_fileds">Por favor complete los campos</string>
    <string name="back">Atrás</string>
    <string name="fragmen_article">Artículos</string>
    <string name="fragmen_family">Familias</string>
    <string name="error_articles">Ocurrió un error cargando la lista de actículos, por favor recargue.</string>
    <string name="error_family">Ocurrió un error cargando el listado de familias de actículos, por favor recargue.</string>
    <string name="Reload">Recargar</string>
    <string name="error_loading">OCURRIÓ UN ERROR</string>
    <string name="error_clients">Ocurrió un error cargando la lista de clientes, por favor recargue</string>
    <string name="fail">Falló</string>
    <string name="add_message">Agregar mensaje</string>
    <string name="save">Guardar</string>
    <string name="main_info">Comentarios sobre el pedido</string>
    <string name="saved">Guardado</string>
    <string name="saving">Guardando</string>
    <string name="delete_message">Borrar mensaje</string>
    <string name="exit_app">Presione una vez más para salir.</string>
    <string name="load_sended_req">Cargar pedidos enviados</string>
    <string name="load_pending_request">Cargar pedidos pendientes</string>
    <string name="action_previous">Atrás</string>
    <string name="action_next">Siguiente</string>
    <string name="action_finish">Terminar</string>
    <string name="choose_client">Seleccione cliente</string>
    <string name="choose_article">Seleccione artículo</string>
    <string name="choose_family">Seleccione familia</string>
    <string name="error_deleting">Ocurió un error cancelando el pedido, por favor intente mas tarde</string>
    <string name="error_deleting_part">Ocurió un error cancelando el parte, por favor intente mas tarde</string>
    <string name="situation">Situación del pedido</string>
    <string name="already_send">El pedido seleccionado ya fué enviado</string>
    <string name="already_send_part">El parte seleccionado ya fué enviado</string>
    <string name="choose_request">Seleccione el pedido a enviar</string>
    <string name="error_sending">Ocurrió un error enviando el pedido, por favor intente mas tarde</string>
    <string name="error_sending_part">Ocurrió un error enviando el parte, por favor intente mas tarde</string>
    <string name="choose_amount">Seleccione la cantidad</string>
    <string name="ok">Aceptar</string>
    <string name="denied">Cancelar</string>
    <string name="empty_article_list">NO HAY ARTÍCULOS EN ESTA FAMILIA</string>
    <string name="choose_art">Seleccione el artículo a eliminar</string>
    <string name="almost_one">Por favor adicione al menos un artículo al pedido</string>
    <string name="dont_send_request">El pedido no fue enviado, por favor intente mas tarde</string>
    <string name="save_secesfully">Guardado correctamente</string>
    <string name="save_loading">Guardando</string>
    <string name="send_succesfully">Enviado correctamente</string>
    <string name="send_loading">Enviando</string>
    <string name="error_editing">Ocurrió un error editando el pedido</string>
    <string name="error_editing_parte">Ocurrió un error editando el parte</string>
    <string name="dont_save_request">No se pudo, salvar el pedido,  contacte a su administrador</string>
    <string name="not_stored_messages">NO HAY MENSAJES GUARDADOS</string>
    <string name="choose_request_delete">Seleccione el pedido a cancelar</string>
    <string name="choose_part_delete">Seleccione el parte a cancelar</string>
    <string name="choose_request_edit">Seleccione el pedido a editar</string>
    <string name="error_viewing">Error mostrando el pedido</string>
    <string name="error_viewing_parte">Error mostrando el parte</string>
    <string name="as">Aceptar</string>
    <string name="specify_amount">Por favor especifíque una cantidad</string>
    <string name="already_get">El pedido ya fue recogido.</string>
    <string name="already_get_part">El part ya fue recogido.</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="save_message">Guardar mensaje</string>
    <string name="parts">Parte de trabajo</string>
    <string name="work_realized">TRABAJOS REALIZADOS</string>
    <string name="material_used">MATERIAL EMPLEADO</string>
    <string name="operator">OPERARIOS</string>
    <string name="please_choose_a_client">Por favor seleccione un cliente</string>
    <string name="choose_obra">Seleccione la obra</string>
    <string name="obras">Obras</string>
    <string name="warning">Por favor complete todos los requerimientos del reporte</string>
    <string name="dont_send_part">El parte no fue enviado, por favor intente en otro momento.</string>
    <string name="dont_save_part">El parte no se salvó, por favor intente mas tarde.</string>
    <string name="choose_part">Seleccione el parte a enviar</string>
    <string name="s">sign</string>

</resources>
