<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e1e1e1"
    android:orientation="vertical"
    android:padding="2dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbHorizontal="@drawable/scroll_thumb"
        android:scrollbarThumbVertical="@drawable/scroll_thumb">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_info_box"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/glass"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:src="@drawable/message" />

            <Spinner
                android:id="@+id/sprequest"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/action_button"
                android:layout_marginBottom="10dp" />

            <include layout="@layout/part_divider" />

            <EditText
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Pedido"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black50"
                android:textColorHint="@color/input_login_hint"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Cliente"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black50"
                android:textColorHint="@color/input_login_hint"
                android:textSize="15sp" />

            <include layout="@layout/part_divider" />

            <EditText
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:cursorVisible="true"
                android:ems="10"
                android:textCursorDrawable="@null"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/black50"
                android:textColorHint="@color/input_login_hint"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btndivider"
                    android:layout_toStartOf="@+id/btndivider"
                    android:text="@string/wsend"
                    android:textColor="@android:color/white"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorNormal="@color/blue_normal"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="@string/send"
                    custom:pb_textProgress="@string/sending" />

                <View
                    android:id="@+id/btndivider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/btnsave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/btndivider"
                    android:layout_toRightOf="@+id/btndivider"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorNormal="@color/blue_normal"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="@string/saved"
                    custom:pb_textProgress="@string/saving" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>